# translate-mcp

./: README.md  pyproject.toml  translate.py
