[project]
name = "translate-mcp"
version = "0.1.0"
description = "Translation CLI and MCP Server using OpenAI"
readme = "README.md"
authors = [{ name = "Himeyama" }]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.26.0",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
translate = "translate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["translate.py"]

[tool.uv]
package = true
